--- a/index.html
+++ b/index.html
@@ -1,19 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
-</head>
-<body>
+    <link rel="stylesheet" href="Style/style.css" />
+    <script
+      src="https://kit.fontawesome.com/fd214fcb10.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="mulish-font container">
     <Header>
-
+      <nav class="navbar-container">
+        <div class="logo-name">
+          <img src="Images/Group 40071 (2).png" alt="" />
+          <h2>NeRo <span class="color-orange">Travel</span></h2>
+        </div>
+        <ul>
+          <li>
+            <a href=""><span class="color-orange">Home</span></a>
+          </li>
+          <li><a href="">Packages</a></li>
+          <li><a href="">Testimonial</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+      <section class="banner-container">
+        <h1>Explore Your Travel</h1>
+        <p>
+          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+          adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+        </p>
+        <div class="search-content">
+          <input type="text" id="size" placeholder="Where go" />
+          <select name="" id="size">
+            <option value="">When</option>
+          </select>
+          <select name="" id="size">
+            <option value="">select Type</option>
+          </select>
+          <button class="banner-container-btn">
+            <i class="fa-solid fa-magnifying-glass search-icon"></i>Find Now
+          </button>
+        </div>
+      </section>
     </Header>
     <main>
-
+      <section class="popular-tour">
+        <div class="popular-tour-content">
+          <h3>Our Popular Tours</h3>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <ul>
+            <li>
+              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </li>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li>
+              Accumsan eget et turpis praesent lorem egestas enim elit bibendum.
+              Risus at in.
+            </li>
+          </ul>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            semper tincidunt.
+          </p>
+          <button>Read More</button>
+        </div>
+        <div class="tour-image">
+          <img src="Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+      <section class="destination-container">
+        <div class="destination-container-title">
+          <h1>Choose Your Destination</h1>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="destination-container-place">
+          <div class="first">
+            <div class="first-1">
+              <h3>Maldives</h3>
+            </div>
+            <div class="first-2">
+              <h3>Indonesia</h3>
+            </div>
+          </div>
+          <div class="second">
+            <div class="second-1">
+              <h2>Srilanka</h2>
+            </div>
+            <div class="second-2">
+              <h2>North America</h2>
+            </div>
+            <div class="second-3">
+              <h2>Kashmir</h2>
+            </div>
+          </div>
+          <div class="third">
+            <div class="third-1">
+              <h2>Bangladesh</h2>
+            </div>
+            <div class="third-2">
+              <h2>Bandarban</h2>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="choose-container">
+        <h1>Why Choose Us</h1>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="card-first">
+          <div class="card bg-1">
+            <img src="Images/Group.png" alt="" />
+            <h3>Handpicked Hotels</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="card bg-2">
+            <img src="Images/Group 27.png" alt="" />
+            <h3>World Class Service</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+        <div class="card bg-3 card-second">
+          <img src="Images/Group 27.png" alt="" />
+          <h3>Best Price Guarantee</h3>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet.
+          </p>
+        </div>
+      </section>
     </main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
